# secp256kfun

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  publish.sh  rustfmt.toml
.github/workflows/: rust.yml  test.yml
arithmetic_macros/: Cargo.toml  README.md
arithmetic_macros/src/: lib.rs  optree.rs
ecdsa_fun/: Cargo.toml  README.md
ecdsa_fun/benches/: bench_ecdsa.rs
ecdsa_fun/src/: lib.rs  libsecp_compat.rs  signature.rs
ecdsa_fun/src/adaptor/: dleq.rs  encrypted_signature.rs  mod.rs  recovery_key.rs
ecdsa_fun/tests/: adaptor_test_vectors.rs  against_c_lib.rs  test_vectors.rs
parity_backend/: Cargo.toml  README.md
parity_backend/src/: ecmult.rs  field.rs  group.rs  scalar.rs
schnorr_fun/: Cargo.toml  README.md
schnorr_fun/benches/: bench_schnorr.rs
schnorr_fun/src/: binonce.rs  blind.rs  frost.rs  frost_backup.rs  keypair.rs  lib.rs  libsecp_compat.rs  message.rs  musig.rs  musig2.rs  schnorr.rs  share_backup.rs  signature.rs
schnorr_fun/src/adaptor/: encrypted_signature.rs  mod.rs
schnorr_fun/src/frost/: chilldkg.rs  frost_poly.rs  mod.rs  session.rs  share.rs  shared_key.rs
schnorr_fun/src/frost/chilldkg/: certpedpop.rs  encpedpop.rs  simplepedpop.rs
schnorr_fun/src/frost/chilldkg/certpedpop/: certificate.rs
schnorr_fun/tests/: against_c_lib.proptest-regressions  against_c_lib.rs  bip340.rs  frost_backup.rs  frost_prop.rs  musig_keyagg.rs  musig_sign_verify.rs  musig_tweak.rs  share_backup.rs
schnorr_fun/tests/musig/: nonce_gen_vectors.json  sign_verify_vectors.json
secp256kfun/: CHANGELOG.md  Cargo.toml  README.md  build.rs
secp256kfun/benches/: bench_ecmult.rs  bench_point.rs
secp256kfun/examples/: quick_bip340.rs
secp256kfun/src/: hash.rs  hex.rs  keypair.rs  lib.rs  libsecp_compat.rs  macros.rs  nonce.rs  op.rs  point.rs  poly.rs  proptest.rs  proptest_impls.rs  scalar.rs  slice.rs  xonly.rs
secp256kfun/src/backend/: k256.rs  k256_impl.rs  mod.rs
secp256kfun/src/backend/k256/: affine.rs  field.rs  k256_impl.rs  mod.rs  mul.rs  projective.rs  scalar.rs  util.rs
secp256kfun/src/backend/k256/field/: field_10x26.rs  field_5x52.rs  field_impl.rs  field_montgomery.rs
secp256kfun/src/backend/k256/scalar/: scalar_4x64.rs  scalar_8x32.rs
secp256kfun/src/backend/parity/: constant_time.rs  mod.rs  variable_time.rs
secp256kfun/src/marker/: mod.rs  point_type.rs  secrecy.rs  zero_choice.rs
secp256kfun/tests/: against_c_lib.rs  expression_macros.rs  poly.rs  readme.rs  serialization_macros.rs  test_hash_to_curve.rs
secp256kfun_parity_backend/: Cargo.toml
secp256kfun_parity_backend/src/: field.rs  group.rs  lib.rs
sigma_fun/: Cargo.toml  README.md
sigma_fun/src/: all.rs  and.rs  ed25519.rs  eq.rs  eq_all.rs  ext.rs  fiat_shamir.rs  lib.rs  or.rs  secp256k1.rs  secret_gen.rs  transcript.rs  writable.rs
sigma_fun/src/ext/: dl_secp256k1_ed25519_eq.rs  mod.rs
sigma_fun/test/: dleq.rs
sigma_fun/tests/: dleq.rs
vrf_fun/: Cargo.toml  README.md
vrf_fun/src/: lib.rs  rfc9381.rs  vrf.rs
vrf_fun/tests/: codec.rs  proptest_tests.rs  rfc9381_test_vectors.rs  serde_tests.rs
