[workspace]

members = [
    "secp256kfun",
    "schnorr_fun",
    "ecdsa_fun",
    "sigma_fun",
    "arithmetic_macros",
    "vrf_fun"
]
resolver = "2"

[workspace.dependencies]
# External dependencies
bincode = { version = "2", default-features = false, features = ["derive"] }
rand_chacha = { version = "0.3", default-features = false }

# Local crates
secp256kfun = { path = "./secp256kfun", version = "0.11", default-features = false }
schnorr_fun = { path = "./schnorr_fun", version = "0.11", default-features = false }
ecdsa_fun = { path = "./ecdsa_fun", version = "0.11", default-features = false }
sigma_fun = { path = "./sigma_fun", version = "0.8", default-features = false }
vrf_fun = { path = "./vrf_fun", version = "0.11", default-features = false }
