[package]
name = "secp256kfun_arithmetic_macros"
version = "0.1.0"
documentation = "https://docs.rs/secp256kfun_arithmetic_macros"
description = "Helper macros for secp256kfun's aritmetic macros"
license = "0BSD"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/ecdsa_fun"
repository = "https://github.com/LLFourn/secp256kfun"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
