[package]
name = "ecdsa_fun"
version = "0.7.1"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "0BSD"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/ecdsa_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/ecdsa_fun"
description = "Bitcoin compatible ECDSA signatures based on secp256kfun"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "ecdsa", "secp256k1"]

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
secp256kfun = { path = "../secp256kfun", version = "0.7.1", default-features = false }
serde_crate = { package = "serde", version = "1.0", default-features = false, optional = true, features = ["derive", "alloc"] }
sigma_fun = { path = "../sigma_fun", version = "0.4.1", features = ["secp256k1"], default-features = false, optional = true }
rand_chacha = {  version = "0.3", optional = true }  # needed for adaptor signatures atm but would be nice to get rid of
bincode = { version = "1.0", optional = true }

[dev-dependencies]
secp256k1 = { default-features = false, version = "0.22", features = ["std"] }
secp256kfun = { path = "../secp256kfun", version = "0.7.1", default-features = false, features = ["libsecp_compat"] }
rand = "0.8"
criterion = "0.3"
lazy_static = "1.4"
sha2 = "0.10"
serde_json = "1"

[[bench]]
name = "bench_ecdsa"
harness = false

[features]
default = ["std"]
all = ["std", "serde", "libsecp_compat", "adaptor"]
libsecp_compat = ["secp256kfun/libsecp_compat"]
std = ["alloc"]
alloc = ["secp256kfun/alloc" ]
serde = ["secp256kfun/serde", "serde_crate"]
nightly = ["secp256kfun/nightly"]
# when https://github.com/rust-lang/cargo/issues/8832 is stabilized use the ? syntax to fix this
adaptor = ["sigma_fun", "bincode", "rand_chacha", "sigma_fun/serde", "sigma_fun/alloc"]
proptest = ["secp256kfun/proptest"]
