[package]
name = "ecdsa_fun"
version = "0.8.1"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.60"
license = "0BSD"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/ecdsa_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/ecdsa_fun"
description = "Bitcoin compatible ECDSA signatures based on secp256kfun"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "ecdsa", "secp256k1"]

[dependencies]
secp256kfun = { path = "../secp256kfun", version = "0.8", default-features = false }
sigma_fun = { path = "../sigma_fun", version = "0.5.0", features = ["secp256k1"], default-features = false, optional = true }
rand_chacha = {  version = "0.3", optional = true }  # needed for adaptor signatures atm but would be nice to get rid of
bincode = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"
lazy_static = "1.4"
sha2 = "0.10"
serde_json = "1"

[[bench]]
name = "bench_ecdsa"
harness = false

[features]
default = ["std"]
libsecp_compat = ["secp256kfun/libsecp_compat"]
std = ["alloc"]
alloc = ["secp256kfun/alloc", "sigma_fun?/alloc" ]
serde = ["secp256kfun/serde","sigma_fun?/serde"]
adaptor = ["dep:sigma_fun", "dep:bincode", "dep:rand_chacha"]
proptest = ["secp256kfun/proptest"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
