[package]
name = "ecdsa_fun"
version = "0.12.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "0BSD"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/ecdsa_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/ecdsa_fun"
description = "Bitcoin compatible ECDSA signatures based on secp256kfun"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "ecdsa", "secp256k1"]

[dependencies]
secp256kfun = { workspace = true }
sigma_fun = { workspace = true, features = ["secp256k1"], optional = true }
rand_chacha = { workspace = true, optional = true }  # needed for adaptor signatures atm but would be nice to get rid of
bincode  = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.4"
lazy_static = "1.4"
sha2 = "0.10"
serde_json = "1"

[[bench]]
name = "bench_ecdsa"
harness = false
required-features = ["libsecp_compat"]


[features]
default = ["std"]
libsecp_compat = ["libsecp_compat_0_30", "secp256kfun/libsecp_compat"]
libsecp_compat_0_27 = ["secp256kfun/libsecp_compat_0_27"]
libsecp_compat_0_28 = ["secp256kfun/libsecp_compat_0_28"]
libsecp_compat_0_29 = ["secp256kfun/libsecp_compat_0_29"]
libsecp_compat_0_30 = ["secp256kfun/libsecp_compat_0_30"]
std = ["alloc"]
alloc = ["secp256kfun/alloc", "sigma_fun?/alloc" ]
serde = ["secp256kfun/serde","sigma_fun?/serde"]
adaptor = ["dep:sigma_fun", "bincode", "dep:rand_chacha"]
bincode = [ "secp256kfun/bincode", "dep:bincode", "sigma_fun?/bincode" ]
proptest = ["secp256kfun/proptest"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
