[package]
name = "secp256kfun_parity_backend"
version = "0.1.2"
description = "Vendored version of paritytech/libsecp256k1 for secp256kfun"
license = "Apache-2.0"
repository = "https://github.com/LLFourn/secp256kfun"
homepage = "https://github.com/LLFourn/secp256kfun"
authors = ["LLFourn <lloyd.fourn@gmail.com>", "Wei Tang <hi@that.world>"]
edition = "2018"
readme = "README.md"


[dependencies]
crunchy = "0.2"
subtle = { version = "2.2", default-features = false }


[features]
default = []
alloc = []
