
[package]
name = "schnorr_fun"
version = "0.10.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "0BSD"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/schnorr_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/schnorr_fun"
description = "BIP340 Schnorr signatures based on secp256kfun"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "schnorr"]

[dependencies]
secp256kfun = { path = "../secp256kfun", version = "0.10",  default-features = false }
bech32 = { version = "0.11", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
secp256kfun = { path = "../secp256kfun", version = "0.10",  features = ["proptest", "bincode", "alloc"] }
rand = { version = "0.8" }
lazy_static = "1.4"
bincode = "1.0"
sha2 = "0.10"
serde_json = "1"
rand_chacha = { version = "0.3" }
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "bench_schnorr"
harness = false
required-features = ["libsecp_compat"]


[features]
default = ["std"]
alloc = ["secp256kfun/alloc" ]
std = ["alloc", "secp256kfun/std"]
bincode = ["secp256kfun/bincode"]
serde = ["secp256kfun/serde"]
libsecp_compat = ["libsecp_compat_0_29", "secp256kfun/libsecp_compat"]
libsecp_compat_0_27 = ["secp256kfun/libsecp_compat_0_27"]
libsecp_compat_0_28 = ["secp256kfun/libsecp_compat_0_28"]
libsecp_compat_0_29 = ["secp256kfun/libsecp_compat_0_29"]
proptest = ["secp256kfun/proptest"]
share_backup = ["dep:bech32"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
