[package]
name = "sigma_fun"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"
license = "0BSD"
description = "A framework for making Sigma protocols fun!"

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
generic-array = "0.14"
digest = "0.9"
secp256kfun = { path = "../secp256kfun", version = "^0.3.2-alpha.0", default-features = false, optional = true }
curve25519-dalek = { version = "3", default-features = false, optional = true, features = ["u64_backend"] }
serde_crate = { package = "serde", version = "1.0", optional = true, default-features = false, features = ["derive"] }
rand_core = "0.5"

[dev-dependencies]
secp256kfun = { path = "../secp256kfun", version = "^0.3.2-alpha.0", default-features = false, features = ["proptest"] }
rand = "0.7"
sha2 = "0.9"
bincode = "1"
proptest = "0.10"
rand_chacha = "0.2"

[features]
all = ["secp256k1", "ed25519", "alloc", "serde"]
default = ["alloc", "secp256k1"]
alloc = ["serde_crate/alloc"]
secp256k1 = ["secp256kfun"]
ed25519 = ["curve25519-dalek"]
serde = ["serde_crate", "secp256kfun/serde", "curve25519-dalek/serde", "generic-array/serde"]
