[package]
name = "sigma_fun"
version = "0.4.1"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "0BSD"
description = "A framework for making Sigma protocols fun!"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/sigma_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/sigma_fun"
categories = ["cryptography"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
generic-array = "0.14"
digest = "0.10"
secp256kfun = { path = "../secp256kfun", version = "0.7.1", default-features = false, optional = true }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, optional = true, features = ["u64_backend"] }
serde_crate = { package = "serde", version = "1.0", optional = true, default-features = false, features = ["derive"] }
rand_core = "0.6"

[dev-dependencies]
secp256kfun = { path = "../secp256kfun", version = "0.7.1", default-features = false, features = ["proptest"] }
rand = "0.8"
sha2 = "0.10"
bincode = "1"
proptest = "1"
rand_chacha = "0.3"

[features]
all = ["secp256k1", "ed25519", "alloc", "serde", "nightly"]
default = ["alloc", "secp256k1"]
alloc = ["serde_crate/alloc", "secp256kfun/alloc"]
secp256k1 = ["secp256kfun"]
ed25519 = ["curve25519-dalek"]
serde = ["serde_crate", "secp256kfun/serde", "curve25519-dalek/serde", "generic-array/serde"]
nightly = ["secp256kfun/nightly"]
