[package]
name = "vrf_fun"
version = "0.12.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "0BSD"
description = "RFC 9381 compliant Verifiable Random Function (VRF) for secp256k1"
homepage = "https://github.com/LLFourn/secp256kfun/tree/master/vrf_fun"
repository = "https://github.com/LLFourn/secp256kfun"
documentation = "https://docs.rs/vrf_fun"

[features]
default = ["std"]
std = ["secp256kfun/std"]
serde = ["dep:serde", "secp256kfun/serde", "sigma_fun/serde", "generic-array/serde"]
bincode = ["secp256kfun/bincode", "sigma_fun/bincode", "dep:bincode"]

[dependencies]
secp256kfun = { workspace = true }
sigma_fun = { workspace = true, features = ["secp256k1"] }
rand_chacha = { workspace = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
generic-array = { version = "0.14", default-features = false }
bincode = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8"
sha2 = "0.10"
proptest = "1.0"
bincode = { workspace = true }
